# visora

./: Cargo.toml  foo.html  major.md  out.html
visora/: Cargo.toml
visora/src/widget/: button.rs  center.rs  container.rs  image.rs  list.rs  mod.rs  text.rs
visora_core/: Cargo.toml
visora_core/src/: color.rs  lib.rs  renderer.rs  state.rs
visora_core/src/treecs/: children.rs  component.rs  entity.rs  linkdata.rs  mod.rs  query.rs  test_utils.rs
visora_core/src/treecs/iterators/: breadth.rs  mod.rs  parent.rs
visora_core/src/widget/: mod.rs
visora_macros/: Cargo.toml
visora_macros/src/: lib.rs
visora_ssr/: Cargo.toml
visora_ssr/src/: lib.rs  main.rs
visora_ssr/src/html/: mod.rs  tags.rs
visora_ssr/src/server/: mod.rs
visora_vello/: Cargo.toml  layout_engine.typ
visora_vello/src/: lib.rs  main.rs  runner.rs
