[package]
name = "visora-ssr"
version = "0.1.0"
edition = "2021"
description = "reserved for future use"
license = "MIT"

[dependencies]
visora-core = { path = "../visora_core" }
visora = { path = "../visora" }
visora-macros = { path = "../visora_macros"}
itertools = "0.13.0"
uuid = { version = "1.13.1", features = ["v4"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
axum = "0.8.4"
futures-util = "0.3.31"

[features]
rocket = []
axum = []
